--- a/APP/app/src/main/res/layout/main.xml
+++ b/APP/app/src/main/res/layout/main.xml
@@ -3,110 +3,128 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/healthy_blue">
+    android:background="@color/light_gray">
 
     <!-- 상단바 -->
     <TextView
         android:id="@+id/titleTextView"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="Throat Care +\n우리의 안전한 목건강을 위해"
-        android:textSize="24sp"
-        android:textColor="@android:color/white"
-        android:textStyle="bold"
+        android:background="@color/healthy_blue"
         android:gravity="center"
         android:padding="16dp"
-        app:layout_constraintTop_toTopOf="parent"
+        android:text="Throat Care +\n우리의 안전한 목건강을 위해"
+        android:textColor="@android:color/white"
+        android:textSize="24sp"
+        android:textStyle="bold"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        app:layout_constraintTop_toTopOf="parent" />
 
     <!-- 설명 이미지 -->
 
     <!-- 원인 설명 버튼 -->
+
     <ImageView
         android:id="@+id/descriptionImageView"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginTop="84dp"
+        android:layout_marginTop="44dp"
+        android:background="@drawable/rounded_corners"
         android:contentDescription="@string/what_is"
         android:scaleType="fitCenter"
         android:src="@drawable/what_is"
-        android:background="@drawable/rounded_corners"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHeight_percent="0.3"
+        app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/titleTextView"
         app:layout_constraintWidth_percent="1.0" />
 
-
     <Button
         android:id="@+id/btnCause"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
+        android:background="@drawable/rounded_background_white"
+        android:padding="12dp"
         android:text="원인 설명\nThe cause of reflux esophagitis"
-        android:background="@drawable/rounded_background"
-        android:padding="16dp"
-        app:layout_constraintTop_toBottomOf="@id/descriptionImageView"
-        app:layout_constraintStart_toStartOf="parent"
+        android:textColor="@color/dark_gray"
+        android:textSize="14sp"
         app:layout_constraintEnd_toStartOf="@+id/btnSymptoms"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/descriptionImageView"
         app:layout_constraintWidth_percent="0.45"
-        app:layout_constraintVertical_bias="0.05"/>
+        app:layout_constraintHeight_percent="0.18"
+        android:layout_marginEnd="8dp"
+        android:layout_marginBottom="8dp" />
 
     <!-- 증상 설명 버튼 -->
     <Button
         android:id="@+id/btnSymptoms"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
+        android:background="@drawable/rounded_background_white"
+        android:padding="12dp"
         android:text="증상 설명\nSymptoms of reflux esophagitis"
-        android:background="@drawable/rounded_background"
-        android:padding="16dp"
-        app:layout_constraintTop_toBottomOf="@id/descriptionImageView"
-        app:layout_constraintStart_toEndOf="@+id/btnCause"
+        android:textColor="@color/dark_gray"
+        android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/btnCause"
+        app:layout_constraintTop_toBottomOf="@id/descriptionImageView"
         app:layout_constraintWidth_percent="0.45"
-        app:layout_constraintVertical_bias="0.05"/>
+        app:layout_constraintHeight_percent="0.18"
+        android:layout_marginStart="8dp"
+        android:layout_marginBottom="8dp" />
 
     <!-- 예방법 설명 버튼 -->
     <Button
         android:id="@+id/btnPrevention"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
+        android:background="@drawable/rounded_background_white"
+        android:padding="12dp"
         android:text="예방법 설명\nHow to prevent reflux esophagitis"
-        android:background="@drawable/rounded_background"
-        android:padding="16dp"
-        app:layout_constraintTop_toBottomOf="@id/btnCause"
-        app:layout_constraintStart_toStartOf="parent"
+        android:textColor="@color/dark_gray"
+        android:textSize="14sp"
         app:layout_constraintEnd_toStartOf="@+id/btnProducts"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/btnCause"
         app:layout_constraintWidth_percent="0.45"
-        app:layout_constraintVertical_bias="0.1"/>
+        app:layout_constraintHeight_percent="0.18"
+        android:layout_marginEnd="8dp"
+        android:layout_marginTop="8dp" />
 
     <!-- 관리 제품 버튼 -->
     <Button
         android:id="@+id/btnProducts"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_height="0dp"
+        android:background="@drawable/rounded_background_white"
+        android:padding="12dp"
         android:text="관리 제품\nThings to help prevent and treat reflux esophagitis"
-        android:background="@drawable/rounded_background"
-        android:padding="16dp"
-        app:layout_constraintTop_toBottomOf="@id/btnSymptoms"
-        app:layout_constraintStart_toEndOf="@+id/btnPrevention"
+        android:textColor="@color/dark_gray"
+        android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/btnPrevention"
+        app:layout_constraintTop_toBottomOf="@+id/btnSymptoms"
         app:layout_constraintWidth_percent="0.45"
-        app:layout_constraintVertical_bias="0.1"/>
+        app:layout_constraintHeight_percent="0.18"
+        android:layout_marginStart="8dp"
+        android:layout_marginTop="8dp" />
 
     <!-- 추가 버튼 -->
     <Button
         android:id="@+id/btnAdd"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="+"
-        android:textColor="@android:color/white"
-        android:textSize="36sp"
-        android:background="@drawable/rounded_background"
+        android:background="@drawable/rounded_button"
         android:padding="16dp"
+        android:text="+"
+        android:textColor="@android:color/darker_gray"
+        android:textSize="36sp"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintVertical_bias="0.95"/>
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintVertical_bias="0.95" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
