--- a/APP/app/src/main/res/layout/method_explain.xml
+++ b/APP/app/src/main/res/layout/method_explain.xml
@@ -2,5 +2,16 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
+    <TextView
+        android:id="@+id/titleTextView"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:padding="16dp"
+        android:text="Throat Care +"
+        android:textColor="@color/healthy_blue"
+        android:textSize="50sp"
+        android:textStyle="bold" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
+
