--- a/APP/app/src/main/res/layout/symptoms_explain.xml
+++ b/APP/app/src/main/res/layout/symptoms_explain.xml
@@ -14,7 +14,7 @@
         android:layout_height="40dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
-        android:background="?attr/selectableItemBackgroundBorderless"
+        android:background="@android:color/transparent"
         android:src="@drawable/ic_back_arrow"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
