--- a/APP/app/src/main/res/layout/main.xml
+++ b/APP/app/src/main/res/layout/main.xml
@@ -41,7 +41,7 @@
         app:layout_constraintTop_toBottomOf="@id/titleTextView"
         app:layout_constraintWidth_percent="1.0" />
 
-    <Button
+    <android.widget.Button
         android:id="@+id/btnCause"
         android:layout_width="0dp"
         android:layout_height="0dp"
@@ -59,7 +59,7 @@
         android:layout_marginBottom="8dp" />
 
     <!-- 증상 설명 버튼 -->
-    <Button
+    <android.widget.Button
         android:id="@+id/btnSymptoms"
         android:layout_width="0dp"
         android:layout_height="0dp"
@@ -77,7 +77,7 @@
         android:layout_marginBottom="8dp" />
 
     <!-- 예방법 설명 버튼 -->
-    <Button
+    <android.widget.Button
         android:id="@+id/btnPrevention"
         android:layout_width="0dp"
         android:layout_height="0dp"
@@ -95,7 +95,7 @@
         android:layout_marginTop="8dp" />
 
     <!-- 관리 제품 버튼 -->
-    <Button
+    <android.widget.Button
         android:id="@+id/btnProducts"
         android:layout_width="0dp"
         android:layout_height="0dp"
@@ -113,11 +113,11 @@
         android:layout_marginTop="8dp" />
 
     <!-- 추가 버튼 -->
-    <Button
+    <android.widget.Button
         android:id="@+id/btnAdd"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:background="@drawable/rounded_button"
+        android:background="@drawable/rounded_background_white"
         android:padding="16dp"
         android:text="+"
         android:textColor="@android:color/darker_gray"
