--- a/APP/front/app/src/main/res/layout/managing_product.xml
+++ b/APP/front/app/src/main/res/layout/managing_product.xml
@@ -8,7 +8,7 @@
     tools:context=".MainActivity">
 
     <!-- Back button -->
-    <ImageButton
+    <android.widget.ImageButton
         android:id="@+id/backButton"
         android:layout_width="40dp"
         android:layout_height="40dp"
