--- a/app/src/main/res/layout/result.xml
+++ b/app/src/main/res/layout/result.xml
@@ -12,7 +12,7 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="32dp"
         android:text="역류성 식도염 수치 측정"
-        android:textSize="24sp"
+        android:textSize="35sp"
         android:textStyle="bold"
         android:textColor="@android:color/white" />
 
@@ -34,8 +34,8 @@
 
             <ProgressBar
                 android:id="@+id/ProgressBar"
-                android:layout_width="200sp"
-                android:layout_height="200sp"
+                android:layout_width="400sp"
+                android:layout_height="350sp"
                 android:layout_centerHorizontal="true"
                 android:progressBackgroundTint="@android:color/darker_gray"
                 android:progressTint="@color/healthy_green"
@@ -50,8 +50,8 @@
                 android:layout_marginTop="16dp"
                 android:layout_centerHorizontal="true"
                 android:text="상태: 보통"
-                android:textSize="18sp"
-                android:textColor="@color/healthy_blue" />
+                android:textSize="25sp"
+                android:textColor="@android:color/darker_gray" />
 
             <!-- 수치 텍스트 -->
             <TextView
@@ -62,8 +62,8 @@
                 android:layout_marginTop="8dp"
                 android:layout_centerHorizontal="true"
                 android:text="수치: 50"
-                android:textSize="18sp"
-                android:textColor="@color/healthy_blue" />
+                android:textSize="25sp"
+                android:textColor="@android:color/darker_gray" />
         </RelativeLayout>
     </androidx.cardview.widget.CardView>
 
