--- a/app/src/main/res/layout/managing_product.xml
+++ b/app/src/main/res/layout/managing_product.xml
@@ -10,15 +10,16 @@
     <!-- Back button -->
     <android.widget.ImageButton
         android:id="@+id/backButton"
-        android:layout_width="40dp"
-        android:layout_height="40dp"
+        android:layout_width="48dp"
+        android:layout_height="48dp"
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:background="@android:color/transparent"
         android:src="@drawable/ic_back_arrow"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        tools:ignore="ContentDescription" />
+        tools:ignore="ContentDescription"
+        android:contentDescription="@string/back_button_description"/>
 
     <!-- Title -->
     <TextView
