--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -1,4 +1,4 @@
- <?xml version="1.0" encoding="utf-8"?>
+<?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
@@ -31,7 +31,7 @@
         android:layout_height="0dp"
         android:layout_marginTop="44dp"
         android:background="@drawable/rounded_corners"
-        android:contentDescription="@string/what_is"
+        android:contentDescription="@strings/what_is"
         android:scaleType="fitCenter"
         android:src="@drawable/what_is"
         app:layout_constraintEnd_toEndOf="parent"
