--- a/app/src/main/res/layout/result.xml
+++ b/app/src/main/res/layout/result.xml
@@ -2,6 +2,7 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/healthy_blue"
     android:padding="16dp">
 
@@ -24,8 +25,8 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="24dp"
         android:padding="24dp"
-        android:cardElevation="8dp"
-        android:cardBackgroundColor="@android:color/white"
+        app:cardElevation="8dp"
+        app:cardBackgroundColor="@android:color/white"
         app:cardCornerRadius="16dp">
 
         <RelativeLayout
