--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,7 +13,85 @@
         android:layout_height="match_parent"
         android:layout_alignParentStart="true"
         android:layout_alignParentTop="true"/>
+    <!-- Dark overlay around the rectangle -->
+    <!-- Top dark overlay -->
+    <View
+        android:id="@+id/darkOverlayTop"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:background="#80000000"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/transparentRectangle"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
 
+    <!-- Bottom dark overlay -->
+    <View
+        android:id="@+id/darkOverlayBottom"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:background="#80000000"
+        app:layout_constraintTop_toBottomOf="@+id/transparentRectangle"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
+
+    <!-- Left dark overlay -->
+    <View
+        android:id="@+id/darkOverlayLeft"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:background="#80000000"
+        app:layout_constraintTop_toTopOf="@+id/transparentRectangle"
+        app:layout_constraintBottom_toBottomOf="@+id/transparentRectangle"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toStartOf="@+id/transparentRectangle" />
+
+    <!-- Right dark overlay -->
+    <View
+        android:id="@+id/darkOverlayRight"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:background="#80000000"
+        app:layout_constraintTop_toTopOf="@+id/transparentRectangle"
+        app:layout_constraintBottom_toBottomOf="@+id/transparentRectangle"
+        app:layout_constraintStart_toEndOf="@+id/transparentRectangle"
+        app:layout_constraintEnd_toEndOf="parent" />
+
+    <!-- Transparent rectangle for QR code scanning area -->
+    <View
+        android:id="@+id/transparentRectangle"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:background="@android:color/transparent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        android:layout_marginHorizontal="64dp"
+        android:layout_marginVertical="250dp"/>
+
+    <!-- Vertical Line (Cross) -->
+    <View
+        android:id="@+id/verticalLine"
+        android:layout_width="2dp"
+        android:layout_height="100dp"
+        android:background="@android:color/white"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
+
+    <!-- Horizontal Line (Cross) -->
+    <View
+        android:id="@+id/horizontalLine"
+        android:layout_width="100dp"
+        android:layout_height="2dp"
+        android:background="@android:color/white"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent" />
     <android.widget.Button
         android:id="@+id/image_capture_button"
         android:layout_width="110dp"
