--- a/app/src/main/res/layout/managing_product.xml
+++ b/app/src/main/res/layout/managing_product.xml
@@ -19,7 +19,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         tools:ignore="ContentDescription"
-        />
+        android:contentDescription="@string/back_button_description"/>
 
     <!-- Title -->
     <TextView
