--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -61,8 +61,8 @@
     <!-- Transparent rectangle for QR code scanning area -->
     <View
         android:id="@+id/transparentRectangle"
-        android:layout_width="0dp"
-        android:layout_height="0dp"
+        android:layout_width="100px"
+        android:layout_height="500px"
         android:background="@android:color/transparent"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -123,7 +123,9 @@
         android:layout_above="@id/continuousCaptureButton"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="16dp"
-        android:text="8"
+        app:layout_constraintBottom_toTopOf="@id/transparentRectangle"
+        app:layout_constraintEnd_toEndOf="@id/verticalLine"
+        android:text="10"
         tools:ignore="MissingConstraints" />
 
     <androidx.constraintlayout.widget.Guideline
@@ -132,5 +134,17 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         app:layout_constraintGuide_percent=".50" />
+
+    <TextView
+        android:id="@+id/uploadStatusTextView"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="16dp"
+        android:text="Upload status will be displayed here"
+        android:textSize="16sp"
+        android:layout_gravity="center_horizontal"
+        tools:ignore="MissingConstraints" />
+
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
