--- a/app/src/main/res/layout/main.xml
+++ b/app/src/main/res/layout/main.xml
@@ -8,30 +8,28 @@
     <!-- 상단바 -->
     <TextView
         android:id="@+id/titleTextView"
-        android:layout_width="match_parent"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:background="@color/healthy_blue"
         android:gravity="center"
-        android:padding="16dp"
-        android:text="Throat Care +\n우리의 안전한 목건강을 위해"
+        android:fontFamily="@font/scdream5"
+        android:layout_marginTop="5dp"
+        android:text="p H A I"
         android:textColor="@android:color/white"
-        android:textSize="24sp"
+        android:textSize="60sp"
         android:textStyle="bold"
-        app:layout_constraintEnd_toEndOf="parent"
+        android:shadowColor="#000000"
+        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintEnd_toEndOf="parent" />
 
     <!-- 설명 이미지 -->
-
-    <!-- 원인 설명 버튼 -->
-
     <ImageView
         android:id="@+id/descriptionImageView"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginTop="44dp"
+        android:layout_marginTop="30dp"
         android:background="@drawable/rounded_corners"
-        android:contentDescription="@strings/what_is"
         android:scaleType="fitCenter"
         android:src="@drawable/what_is"
         app:layout_constraintEnd_toEndOf="parent"
@@ -41,37 +39,38 @@
         app:layout_constraintTop_toBottomOf="@id/titleTextView"
         app:layout_constraintWidth_percent="1.0" />
 
+    <!-- 증상 설명 버튼 -->
     <android.widget.Button
         android:id="@+id/btnCause"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:layout_marginEnd="8dp"
         android:background="@drawable/rounded_background_white"
-        android:padding="12dp"
-        android:text="원인 설명\nThe cause of reflux esophagitis"
+        android:padding="0dp"
+        android:text="원인\n설명"
+        android:fontFamily="@font/scdream5"
         android:textColor="@color/dark_gray"
-        android:textSize="14sp"
+        android:textSize="30sp"
         app:layout_constraintEnd_toStartOf="@+id/btnSymptoms"
+        app:layout_constraintHeight_percent="0.18"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/descriptionImageView"
-        app:layout_constraintWidth_percent="0.45"
-        app:layout_constraintHeight_percent="0.18"
-        android:layout_marginEnd="8dp"
-        android:layout_marginBottom="8dp" />
+        app:layout_constraintWidth_percent="0.48" />
 
-    <!-- 증상 설명 버튼 -->
     <android.widget.Button
         android:id="@+id/btnSymptoms"
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:background="@drawable/rounded_background_white"
-        android:padding="12dp"
-        android:text="증상 설명\nSymptoms of reflux esophagitis"
+        android:padding="0dp"
+        android:text="증상\n설명"
         android:textColor="@color/dark_gray"
-        android:textSize="14sp"
+        android:textSize="30sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/btnCause"
         app:layout_constraintTop_toBottomOf="@id/descriptionImageView"
-        app:layout_constraintWidth_percent="0.45"
+        android:fontFamily="@font/scdream5"
+        app:layout_constraintWidth_percent="0.48"
         app:layout_constraintHeight_percent="0.18"
         android:layout_marginStart="8dp"
         android:layout_marginBottom="8dp" />
@@ -83,13 +82,14 @@
         android:layout_height="0dp"
         android:background="@drawable/rounded_background_white"
         android:padding="12dp"
-        android:text="예방법 설명\nHow to prevent reflux esophagitis"
+        android:text="예방법\n설명"
         android:textColor="@color/dark_gray"
-        android:textSize="14sp"
+        android:textSize="30sp"
         app:layout_constraintEnd_toStartOf="@+id/btnProducts"
+        android:fontFamily="@font/scdream5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/btnCause"
-        app:layout_constraintWidth_percent="0.45"
+        app:layout_constraintWidth_percent="0.48"
         app:layout_constraintHeight_percent="0.18"
         android:layout_marginEnd="8dp"
         android:layout_marginTop="8dp" />
@@ -101,13 +101,14 @@
         android:layout_height="0dp"
         android:background="@drawable/rounded_background_white"
         android:padding="12dp"
-        android:text="관리 제품\nThings to help prevent and treat reflux esophagitis"
+        android:text="관리\n제품"
         android:textColor="@color/dark_gray"
-        android:textSize="14sp"
+        android:textSize="30sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/btnPrevention"
+        android:fontFamily="@font/scdream5"
         app:layout_constraintTop_toBottomOf="@+id/btnSymptoms"
-        app:layout_constraintWidth_percent="0.45"
+        app:layout_constraintWidth_percent="0.48"
         app:layout_constraintHeight_percent="0.18"
         android:layout_marginStart="8dp"
         android:layout_marginTop="8dp" />
@@ -119,8 +120,10 @@
         android:layout_height="wrap_content"
         android:background="@drawable/rounded_background_white"
         android:padding="16dp"
-        android:text="+"
-        android:textColor="@android:color/darker_gray"
+        android:fontFamily="@font/scdream5"
+        android:layout_marginBottom="20dp"
+        android:text="시작"
+        android:textColor="@android:color/black"
         android:textSize="36sp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
