--- a/app/src/main/res/layout/method_explain.xml
+++ b/app/src/main/res/layout/method_explain.xml
@@ -1,116 +1,117 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/white">
+    android:background="@color/healthy_blue"
+    tools:context=".MainActivity">
 
+    <!-- Back button -->
+
+
+    <ImageButton
+        android:id="@+id/backButton"
+        android:layout_width="50dp"
+        android:contentDescription="뒤로 가기 버튼"
+        android:layout_height="50dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="16dp"
+        android:src="@drawable/ic_back_arrow"
+        android:scaleType="centerInside"
+        android:padding="5dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        tools:ignore="ContentDescription" />
+
+
+
+    <!-- Title -->
     <TextView
         android:id="@+id/titleTextView"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:gravity="center"
-        android:padding="16dp"
-        android:text="Throat Care +"
-        android:textColor="@color/healthy_blue"
-        android:textSize="50sp"
-        android:textStyle="bold"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
-
-    <androidx.viewpager2.widget.ViewPager2
-        android:id="@+id/viewPager"
         android:layout_width="0dp"
-        android:layout_height="0dp"
-        app:layout_constraintTop_toBottomOf="@id/titleTextView"
-        app:layout_constraintBottom_toTopOf="@id/footerTextView"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
-
-    <TextView
-        android:id="@+id/footerTextView"
-        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:gravity="center"
         android:padding="16dp"
-        android:text="측정 방법"
-        android:textColor="@color/healthy_blue"
+        android:fontFamily="@font/scdream5"
+        android:text="측정방법 설명"
+        android:textColor="@android:color/black"
         android:textSize="30sp"
         android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"/>
+        app:layout_constraintTop_toBottomOf="@id/backButton" />
 
-    <ScrollView
-        android:id="@+id/instructionsScrollView"
+    <!-- Subtitle -->
+    <TextView
+        android:id="@+id/subtitleTextView"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_margin="16dp"
-        app:layout_constraintTop_toBottomOf="@id/footerTextView"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:gravity="center"
+        android:padding="8dp"
+        android:text="Explanation of how we measure"
+        android:textColor="@android:color/black"
+        android:textSize="20sp"
+        android:fontFamily="@font/scdream5"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent">
+        app:layout_constraintTop_toBottomOf="@id/titleTextView" />
+
+    <!-- ScrollView containing the content -->
+    <ScrollView
+        android:id="@+id/scrollView"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        android:layout_margin="16dp"
+        android:background="@android:color/white"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/subtitleTextView">
 
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            android:padding="16dp"
-            android:background="@color/white">
+            android:padding="16dp">
+
+
+
+            <!-- Answer -->
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:fontFamily="@font/scdream5"
+                android:text="① 구강 내 타액을 소량 채취하세요.\n"
+                android:textSize="20sp" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="측정 방법"
-                android:textColor="@color/healthy_blue"
-                android:textSize="30sp"
-                android:textStyle="bold"
-                android:layout_marginBottom="8dp"/>
+                android:fontFamily="@font/scdream5"
+                android:layout_marginBottom="4dp"
+                android:text="② 스포이드에 타액을 조금 담아주세요.\n"
+                android:textSize="20sp" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="① 구강 내 타액을 소량 채취하세요."
-                android:textSize="20sp"
-                android:layout_marginBottom="4dp"/>
+                android:fontFamily="@font/scdream5"
+                android:layout_marginBottom="4dp"
+                android:text="③ pH 시험지에 떨어뜨려주세요.\n"
+                android:textSize="20sp" />
 
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="② 스포이드에 타액을 조금 담아주세요."
-                android:textSize="20sp"
-                android:layout_marginBottom="4dp"/>
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="③ pH 시험지에 떨어뜨려주세요."
-                android:textSize="20sp"
-                android:layout_marginBottom="4dp"/>
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="④ pH 시험지를 미리 촬영한 사진을 갤러리에서 선택하거나 지금 촬영해주세요."
-                android:textSize="20sp"
-                android:layout_marginBottom="4dp"/>
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="⑤ 검은색 초점은 배경에, 하얀색 초점은 pH 시험지 중앙으로 옮겨주세요."
-                android:textSize="20sp"
-                android:layout_marginBottom="4dp"/>
-
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="⑥ 결과가 나올 때까지 잠시만 기다려주세요. 진단 결과가 나오면 확인해주세요!"
-                android:textSize="20sp"/>
-
+                android:layout_marginBottom="4dp"
+                android:fontFamily="@font/scdream5"
+                android:text="④ pH 시험지를 미리 촬영한 사진을 \n갤러리에서 선택하거나 지금 촬영해주세요."
+                android:textSize="20sp" />
         </LinearLayout>
     </ScrollView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
+
+
+    </androidx.constraintlayout.widget.ConstraintLayout>
