--- a/app/src/main/res/layout/result.xml
+++ b/app/src/main/res/layout/result.xml
@@ -2,7 +2,6 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/healthy_blue"
     android:padding="16dp">
 
@@ -13,9 +12,10 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="32dp"
         android:text="역류성 식도염 수치 측정"
-        android:textSize="35sp"
+        android:fontFamily="@font/scdream5"
+        android:textSize="30sp"
         android:textStyle="bold"
-        android:textColor="@android:color/white" />
+        android:textColor="@android:color/black" />
 
     <androidx.cardview.widget.CardView
         android:id="@+id/cardView"
@@ -25,13 +25,14 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="24dp"
         android:padding="24dp"
-        app:cardElevation="8dp"
-        app:cardBackgroundColor="@android:color/white"
+        android:cardElevation="8dp"
+        android:cardBackgroundColor="@android:color/white"
         app:cardCornerRadius="16dp">
 
         <RelativeLayout
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content">
+            android:layout_height="wrap_content"
+            >
 
             <ProgressBar
                 android:id="@+id/ProgressBar"
@@ -50,21 +51,12 @@
                 android:layout_below="@id/ProgressBar"
                 android:layout_marginTop="16dp"
                 android:layout_centerHorizontal="true"
-                android:text="상태: 보통"
-                android:textSize="25sp"
+                android:text="\n상태: 보통\n"
+                android:fontFamily="@font/scdream5"
+                android:textSize="30sp"
                 android:textColor="@android:color/darker_gray" />
 
-            <!-- 수치 텍스트 -->
-            <TextView
-                android:id="@+id/tvValue"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_below="@id/tvStatus"
-                android:layout_marginTop="8dp"
-                android:layout_centerHorizontal="true"
-                android:text="수치: 50"
-                android:textSize="25sp"
-                android:textColor="@android:color/darker_gray" />
+
         </RelativeLayout>
     </androidx.cardview.widget.CardView>
 
@@ -86,22 +78,24 @@
             android:background="@drawable/rounded_background_white"
             android:padding="16dp"
             android:text="다시 측정"
-            android:textColor="@color/healthy_blue"
-            android:textSize="18sp"
+            android:fontFamily="@font/scdream5"
+            android:textColor="@color/dark_gray"
+            android:textSize="24sp"
             android:textStyle="bold"/>
 
         <android.widget.Button
             android:id="@+id/btnHome"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
             android:layout_margin="8dp"
+            android:layout_weight="1"
             android:background="@drawable/rounded_background_white"
             android:padding="16dp"
             android:text="홈 화면 이동"
-            android:textColor="@color/healthy_blue"
-            android:textSize="18sp"
-            android:textStyle="bold"/>
+            android:fontFamily="@font/scdream5"
+            android:textColor="@color/dark_gray"
+            android:textSize="24sp"
+            android:textStyle="bold" />
     </LinearLayout>
 
 </RelativeLayout>
