--- a/app/src/main/res/layout/splash.xml
+++ b/app/src/main/res/layout/splash.xml
@@ -10,7 +10,7 @@
         android:id="@+id/appNameTextView"
         android:layout_width="200dp"
         android:layout_height="50dp"
-        android:src="@drawable/kwLogo"
+        android:src="@drawable/logokw"
         app:layout_constraintBottom_toTopOf="@+id/logoImageView"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -23,7 +23,7 @@
         android:id="@+id/logoImageView"
         android:layout_width="400dp"
         android:layout_height="400dp"
-        android:src="@drawable/phaiImg2"
+        android:src="@drawable/phaiview"
         android:padding="16dp"
         app:layout_constraintTop_toBottomOf="@id/appNameTextView"
         app:layout_constraintBottom_toTopOf="@id/taglineTextView"
