--- a/app/src/main/res/layout/result.xml
+++ b/app/src/main/res/layout/result.xml
@@ -1,4 +1,3 @@
-<!-- res/layout/activity_measure.xml -->
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -25,19 +24,16 @@
         android:layout_centerHorizontal="true"
         android:layout_marginTop="24dp"
         android:padding="24dp"
-        android:cardElevation="8dp"
-        android:cardBackgroundColor="@android:color/white"
-        app:cardCornerRadius="16dp">
+        >
 
         <RelativeLayout
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            >
+            android:layout_height="wrap_content">
 
             <ProgressBar
                 android:id="@+id/ProgressBar"
-                android:layout_width="400sp"
-                android:layout_height="350sp"
+                android:layout_width="400dp"
+                android:layout_height="350dp"
                 android:layout_centerHorizontal="true"
                 android:progressBackgroundTint="@android:color/darker_gray"
                 android:progressTint="@color/healthy_green"
@@ -51,13 +47,13 @@
                 android:layout_below="@id/ProgressBar"
                 android:layout_marginTop="16dp"
                 android:layout_centerHorizontal="true"
-                android:text="\n상태: 보통\n"
+                android:text="상태: 보통"
                 android:fontFamily="@font/scdream5"
                 android:textSize="30sp"
                 android:textColor="@android:color/darker_gray" />
 
-
         </RelativeLayout>
+
     </androidx.cardview.widget.CardView>
 
     <LinearLayout
@@ -69,7 +65,7 @@
         android:layout_marginBottom="32dp"
         android:weightSum="2">
 
-        <android.widget.Button
+        <Button
             android:id="@+id/btnRetake"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -83,7 +79,7 @@
             android:textSize="24sp"
             android:textStyle="bold"/>
 
-        <android.widget.Button
+        <Button
             android:id="@+id/btnHome"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
