--- a/connect/templates/index.html
+++ b/connect/templates/index.html
@@ -12,7 +12,7 @@
         <input type="text" name="model_dir" value="./models"><br>
 
         <label for="input_image">Upload an Image:</label>
-        <input type="file" name="input_image" accept="image/*"><br>
+        <input type="file" name="input_image" accept="C:\\Users\\pc10\\vscode\\pHAI\\connect\\tmp\\uploads"><br>
 
         <label for="output_dir">Output Directory:</label>
         <input type="text" name="output_dir" value="./output"><br>
