--- a/app/src/main/res/layout/method_explain.xml
+++ b/app/src/main/res/layout/method_explain.xml
@@ -92,7 +92,7 @@
                 android:layout_height="wrap_content"
                 android:fontFamily="@font/scdream5"
                 android:layout_marginBottom="4dp"
-                android:text="③ pH 시험지에 떨어뜨려주세요.\n"
+                android:text="③ pH 시험지를 최대한 촬영 화면의 \n네모칸에 맞춰주세요.\n"
                 android:textSize="20sp" />
 
             <TextView
@@ -100,7 +100,23 @@
                 android:layout_height="wrap_content"
                 android:layout_marginBottom="4dp"
                 android:fontFamily="@font/scdream5"
-                android:text="④ pH 시험지를 미리 촬영한 사진을 \n갤러리에서 선택하거나 지금 촬영해주세요."
+                android:text="④ 오른쪽에 있는 [연속 촬영] 버튼을 눌러주세요.\n-> 10초 후 10장의 사진이 찍힙니다.\n"
+                android:textSize="20sp" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="4dp"
+                android:fontFamily="@font/scdream5"
+                android:text="⑤ 중앙의 타이머가 1이 되었을 때 촬영 화면의 십자가에 맞추어 채취한 타액을 스포이드로 소량 떨어뜨려주세요.\n"
+                android:textSize="20sp" />
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="4dp"
+                android:fontFamily="@font/scdream5"
+                android:text="⑥ 오른쪽 위의 촬영된 사진 수가 10장이 되면 기다려주세요. 잠시후 결과가 나옵니다.\n"
                 android:textSize="20sp" />
         </LinearLayout>
     </ScrollView>
