서버까지 합침

--- a/app/src/main/res/layout/method_explain.xml
+++ b/app/src/main/res/layout/method_explain.xml
@@ -75,6 +75,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:textColor="@color/black"
                 android:fontFamily="@font/scdream5"
                 android:text="① 구강 내 타액을 소량 채취하세요.\n"
                 android:textSize="20sp" />
@@ -82,6 +83,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:textColor="@color/black"
                 android:fontFamily="@font/scdream5"
                 android:layout_marginBottom="4dp"
                 android:text="② 스포이드에 타액을 조금 담아주세요.\n"
@@ -90,6 +92,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:textColor="@color/black"
                 android:fontFamily="@font/scdream5"
                 android:layout_marginBottom="4dp"
                 android:text="③ pH 시험지를 최대한 촬영 화면의 \n네모칸에 맞춰주세요.\n"
@@ -98,6 +101,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:textColor="@color/black"
                 android:layout_marginBottom="4dp"
                 android:fontFamily="@font/scdream5"
                 android:text="④ 오른쪽에 있는 [연속 촬영] 버튼을 눌러주세요.\n-> 10초 후 10장의 사진이 찍힙니다.\n"
@@ -106,6 +110,7 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:textColor="@color/black"
                 android:layout_marginBottom="4dp"
                 android:fontFamily="@font/scdream5"
                 android:text="⑤ 중앙의 타이머가 1이 되었을 때 촬영 화면의 십자가에 맞추어 채취한 타액을 스포이드로 소량 떨어뜨려주세요.\n"
@@ -114,6 +119,8 @@
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+
+                android:textColor="@color/black"
                 android:layout_marginBottom="4dp"
                 android:fontFamily="@font/scdream5"
                 android:text="⑥ 오른쪽 위의 촬영된 사진 수가 10장이 되면 기다려주세요. 잠시후 결과가 나옵니다.\n"
@@ -131,6 +138,7 @@
         android:textStyle="bold"
         android:layout_margin="16dp"
         android:background="@color/white"
+        android:textColor="@color/black"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
