--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -92,30 +92,13 @@
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
-    <android.widget.Button
-        android:id="@+id/image_capture_button"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
-        android:layout_weight="1"
-        android:layout_marginRight="40dp"
-        android:layout_marginBottom="80dp"
-        android:background="@drawable/rounded_background_white"
-        android:padding="16dp"
-        android:text="한장 촬영"
-        android:fontFamily="@font/scdream5"
-        android:textColor="@color/dark_gray"
-        android:textSize="20sp"
-        android:textStyle="bold"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintEnd_toStartOf="@id/vertical_centerline" />
 
     <android.widget.Button
         android:id="@+id/continuousCaptureButton"
-        android:layout_width="0dp"
-        android:layout_height="wrap_content"
+        android:layout_width="300dp"
+        android:layout_height="60dp"
         android:layout_weight="1"
-        android:layout_marginLeft="40dp"
+        android:layout_marginLeft="-150dp"
         android:layout_marginBottom="80dp"
         android:background="@drawable/rounded_background_white"
         android:padding="16dp"
@@ -130,7 +113,7 @@
         android:id="@+id/timerTextView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="-100dp"
+        android:layout_marginBottom="-160dp"
         android:text="10"
         android:textColor="@android:color/white"
         android:textSize="40sp"
@@ -146,15 +129,6 @@
         android:orientation="vertical"
         app:layout_constraintGuide_percent=".50" />
 
-    <TextView
-        android:id="@+id/uploadStatusTextView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:text="Upload status will be displayed here"
-        android:textSize="16sp"
-        android:layout_gravity="center_horizontal"
-        tools:ignore="MissingConstraints" />
 
     <!-- Photo Count TextView -->
     <TextView
@@ -162,7 +136,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="16dp"
-        android:layout_marginEnd="10dp"
+        android:layout_marginEnd="105dp"
         android:text="현재 촬영된 사진: 0 장"
         android:textColor="@android:color/white"
         android:textSize="20sp"
