--- a/app/src/main/res/layout/popup.xml
+++ b/app/src/main/res/layout/popup.xml
@@ -3,7 +3,7 @@
     android:layout_width="300dp"
     android:layout_height="wrap_content"
     android:orientation="vertical"
-    android:padding="16dp"
+    android:padding="20dp"
     android:background="@drawable/dialog_background"> <!-- 배경 설정 -->
 
     <TextView
@@ -25,11 +25,14 @@
         android:textSize="16sp"
         android:layout_marginBottom="16dp"/>
 
-    <Button
+    <android.widget.Button
         android:id="@+id/dialogButton"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="확인"
+        android:textSize="15dp"
+        android:textColor="@color/light_gray"
         android:layout_gravity="end"
+        android:background="@color/dark_gray"
         />
 </LinearLayout>
