--- a/app/src/main/res/layout/result.xml
+++ b/app/src/main/res/layout/result.xml
@@ -1,102 +1,114 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:background="@color/healthy_blue"
-    android:padding="16dp">
+        android:padding="16dp">
 
-    <TextView
-        android:id="@+id/tvTitle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="32dp"
-        android:text="역류성 식도염 진단하기"
-        android:fontFamily="@font/scdream5"
-        android:textSize="30sp"
-        android:textStyle="bold"
-        android:textColor="@android:color/black" />
-
-    <androidx.cardview.widget.CardView
-        android:id="@+id/cardView"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@id/tvTitle"
-        android:layout_centerHorizontal="true"
-        android:layout_marginTop="48dp"
-        android:padding="24dp"
-        >
-
-        <RelativeLayout
+        <TextView
+            android:id="@+id/tvTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:background="@color/white"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="32dp"
+            android:text="역류성 식도염 진단하기"
+            android:fontFamily="@font/scdream5"
+            android:textSize="30sp"
+            android:textStyle="bold"
+            android:textColor="@android:color/black" />
+
+        <ImageView
+            android:id="@+id/resultImageView"
+            android:layout_width="250dp"
+            android:layout_height="100dp"
+            android:layout_marginTop="495dp"
+            android:layout_marginStart="70dp"
+            android:scaleType="fitCenter"
+            android:src="@drawable/img"
+            />
+
+        <androidx.cardview.widget.CardView
+            android:id="@+id/cardView"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/tvTitle"
+            android:layout_centerHorizontal="true"
+            android:layout_marginTop="48dp"
+            android:padding="24dp"
             >
 
-            <ProgressBar
-                android:id="@+id/ProgressBar"
-                android:layout_width="300dp"
-                android:layout_height="40dp"
-                android:layout_marginTop="200dp"
-                android:layout_marginLeft="50dp"
-                android:layout_centerHorizontal="true"
-                android:layout_centerVertical="true"
-                android:progressBackgroundTint="@android:color/darker_gray"
-                android:progressTint="@color/healthy_green"
-                android:indeterminate="false"
-                style="@android:style/Widget.ProgressBar.Horizontal" />
-
-            <!-- 수치 단계 텍스트 -->
-            <TextView
-                android:id="@+id/tvStatus"
+            <RelativeLayout
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_centerHorizontal="true"
-                android:layout_below="@id/ProgressBar"
-                android:layout_marginBottom="50dp"
-                android:text="로딩중.."
+                android:background="@color/white"
+                android:layout_marginTop="-20dp"
+                >
+
+                <ProgressBar
+                    android:id="@+id/ProgressBar"
+                    android:layout_width="300dp"
+                    android:layout_height="40dp"
+                    android:layout_marginTop="200dp"
+                    android:layout_marginLeft="50dp"
+                    android:layout_centerHorizontal="true"
+                    android:layout_centerVertical="true"
+                    android:progressBackgroundTint="@android:color/darker_gray"
+                    android:progressTint="@color/healthy_green"
+                    android:indeterminate="false"
+                    style="@android:style/Widget.ProgressBar.Horizontal" />
+
+                <!-- 수치 단계 텍스트 -->
+                <TextView
+                    android:id="@+id/tvStatus"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_centerHorizontal="true"
+                    android:layout_below="@id/ProgressBar"
+                    android:layout_marginBottom="50dp"
+                    android:text="로딩중.."
+                    android:textColor="@color/dark_gray"
+                    android:textSize="70sp" />
+
+            </RelativeLayout>
+
+        </androidx.cardview.widget.CardView>
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:orientation="horizontal"
+            android:gravity="center"
+            android:layout_marginBottom="32dp"
+            android:weightSum="2">
+
+            <android.widget.Button
+                android:id="@+id/btnRetake"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_weight="1"
+                android:layout_margin="8dp"
+                android:background="@drawable/rounded_background_white"
+                android:padding="16dp"
+                android:text="다시 측정"
+                android:fontFamily="@font/scdream5"
                 android:textColor="@color/dark_gray"
-                android:textSize="70sp" />
+                android:textSize="24sp"
+                android:textStyle="bold"/>
 
-        </RelativeLayout>
-
-    </androidx.cardview.widget.CardView>
-
-    <LinearLayout
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:orientation="horizontal"
-        android:gravity="center"
-        android:layout_marginBottom="32dp"
-        android:weightSum="2">
-
-        <android.widget.Button
-            android:id="@+id/btnRetake"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:layout_margin="8dp"
-            android:background="@drawable/rounded_background_white"
-            android:padding="16dp"
-            android:text="다시 측정"
-            android:fontFamily="@font/scdream5"
-            android:textColor="@color/dark_gray"
-            android:textSize="24sp"
-            android:textStyle="bold"/>
-
-        <android.widget.Button
-            android:id="@+id/btnHome"
-            android:layout_width="0dp"
-            android:layout_height="wrap_content"
-            android:layout_margin="8dp"
-            android:layout_weight="1"
-            android:background="@drawable/rounded_background_white"
-            android:padding="16dp"
-            android:text="홈 화면 이동"
-            android:fontFamily="@font/scdream5"
-            android:textColor="@color/dark_gray"
-            android:textSize="24sp"
-            android:textStyle="bold" />
-    </LinearLayout>
+            <android.widget.Button
+                android:id="@+id/btnHome"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_margin="8dp"
+                android:layout_weight="1"
+                android:background="@drawable/rounded_background_white"
+                android:padding="16dp"
+                android:text="홈 화면 이동"
+                android:fontFamily="@font/scdream5"
+                android:textColor="@color/dark_gray"
+                android:textSize="24sp"
+                android:textStyle="bold" />
+        </LinearLayout>
 
 </RelativeLayout>
