--- a/app/src/main/res/layout/method_prevent.xml
+++ b/app/src/main/res/layout/method_prevent.xml
@@ -93,7 +93,7 @@
                 android:fontFamily="@font/scdream5"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="16dp"
-                android:text="A. 위 식도 역류질환은 만성적인 질환이며, 치료를 중단하거나 약물의 용량을 감량하면 증상이 재발하는 경우가 많아 지속적인 치료와 관리를 필요로 한다.\n\n① 식후에 바로 눕지 않도록 하며, 취침시간 전의 음식 섭취는 피하도록 한다.\n\n② 음주는 취침 중에도 위산이 계속 분비되도록 하며, 위 내용물이 식도로 역류하기 쉬운 환경을 조장할 수 있으므로 술은 제한하는 것이 좋다.\n\n③ 흡연은 침 분비를 감소시키기 때문에 위식도 역류질환에 해로우므로 제한하는 것이 좋다."
+                android:text="A. 위 식도 역류질환은 만성적인 질환이며, 치료를 중단하거나 약물의 용량을 감량하면 증상이 재발하는 경우가 많아 지속적인 치료와 관리가 필요합니다.\n\n① 식후에 바로 눕지 않도록 하며, 취침시간 전의 음식 섭취는 피하도록 합니다.\n\n② 음주는 취침 중에도 위산이 계속 분비되도록 하며, 위 내용물이 식도로 역류하기 쉬운 환경을 조장할 수 있으므로 술은 제한하는 것이 좋습니다.\n\n③ 흡연은 침 분비를 감소시키기 때문에 위식도 역류질환에 해로우므로 제한하는 것이 좋습니다."
                 android:textColor="@android:color/black"
                 android:textSize="20sp" />
         </LinearLayout>
